Fix logo link overflow issues

--- a/src/stylus/header.styl
+++ b/src/stylus/header.styl
@@ -135,6 +135,10 @@
 	}
 }
 
+.logo-link {
+	display: inline-block;
+}
+
 #logo {
 	display: block;
 	text-indent: -9999px;
